--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chokidar": "^3.4.3",
     "node": "^15.4.0",
     "postcss": "^7.0.35",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -22,7 +23,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/styel/tailwind.css -o src/styel/main.css",
+    "build:watch": "postcss src/styel/tailwind.css -o src/styel/main.css --watch"
   },
   "eslintConfig": {
     "extends": [
